# fr-trie

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: iterator.rs  key.rs  lib.rs  matcher.rs  node.rs  trie.rs
src/glob/: acl.rs  mod.rs
